# NNN

./: .gitignore  CMakeLists.txt  CppProperties.json  README.md  activations.cpp  activations.h  main.cpp  sequential.h  sequential2.h  tests.h  utils.cpp  utils.h
data/mnist/: train_y.csv  val_x.csv  val_y.csv
data/mnist_csv/: val_y.csv
enc_temp_folder/9c77c56ba2cece7b287f893a90b7737a/: testOps.h
include/: Tensor.h  batchCSVReader.h  batchPNGReader.h  batchReader.h  convolutions.h  cost_funs.h  costs.h  eigenFuns.h  layer_activations.h  layer_traits.h  layers.h  max_poling.h  pngWrapper.h  sequential.h  timer.h  typedefs.h  utils.h
src/: CMakeLists.txt  activations.h  costs.cpp  costs.h  eigenFuns.h  layers.cpp  sequential.cpp  sequential.h
src/PNG/: CMakeLists.txt  pngReader.cpp  pngWrapper.h  pngWriter.cpp  testpng
tests/: CMakeLists.txt  main.cpp  pngTests.h  testOps.h  tests.h
